<resources>
    <string name="app_name">Bhaskara</string>
    <string name="sobreTitle">Desenvolvedores</string>
    <string name="devs">Daniel Menegasso \nDanilo de Maria \nGuilherme Abraham</string>
    <string name="empresa">Amdemassh@gmail.com\ndaniloctg@msn.com\ndanielmenegasso@gmail.com\nguilhermeabraham93@gmail.com</string>
    <string name="facebook">Facebook</string>
    <string name="facebookDaniel">Daniel Menegasso\nhttps://www.facebook.com/axestoaxes</string>
    <string name="facebookDanilo">Danilo de Maria\nhttps://www.facebook.com/Danilodemaria1993</string>
    <string name="versao">Amdema SSH   Versão 1.0</string>
    <string name="calcula_bhaskara">Calcula Bhaskara</string>
    <string name="valorA">Valor de A</string>
    <string name="valorB">Valor de B</string>
    <string name="valorC">Valor de C</string>
    <string name="calcular">Calcular</string>
    <string name="limpar_campos">Limpar Campos</string>
    <string name="sobre">Sobre</string>
</resources>
