<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/calcula_bhaskara"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textoValores"
        android:layout_below="@id/textView"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/textView2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/valorA"
            android:textColor="@android:color/black"
            android:textAlignment="center"
/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/valorB"
            android:id="@+id/textView3"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/valorC"
            android:id="@+id/textView4"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/valoresABC"
        android:layout_below="@+id/textoValores">

        <EditText
            android:id="@+id/valorA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="numberSigned"
            android:textAlignment="center" >
            <requestFocus/>
        </EditText>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/valorB"
            android:layout_weight="0.5"
            android:textAlignment="center"
             />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/valorC"
            android:layout_weight="0.5"
            android:textAlignment="center"
             />
    </LinearLayout>


    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valoresABC"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:onClick="calcula"
        android:text="@string/calcular"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/button"
        android:id="@+id/textosX">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="X1"
            android:id="@+id/textoX1"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="X2"
            android:id="@+id/textoX2"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/camposX"
        android:layout_below="@id/textosX">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/x1"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/x2"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:textStyle="bold"
            />

    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginTop="30dp"
    >

    <Button
        android:id="@+id/button2"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:onClick="limpaCampos"
        android:text="@string/limpar_campos"
        android:textSize="15sp" />

    <Button
        android:id="@+id/sobre"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:onClick="popup"
        android:text="Sobre"
        android:textSize="15sp" />

</LinearLayout>

</RelativeLayout>

